--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="legend-item">🐀</div>
                 <div class="legend-text">Mischievous Mouse (500 pts) - Grow</div>
                 <canvas class="yarn-ball-legend legend-item" id="yarnLegend" width="40" height="40"></canvas>
-                <div class="legend-text">Yarn Ball (300 pts) - Score Bonus</div>
+                <div class="legend-text">Treat (300 pts) - Score Bonus</div>
                 <div class="legend-item">🛏️</div>
                 <div class="legend-text">Cat Bed (200 pts) - Score Bonus & Nap</div>
                 <div class="legend-item">🌿</div>
