Fixed top row width and score issues. Added alt-h to reset high score.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div id="gameContainer">
         <div id="ui">
-            <div id="score">Score: 0</div>
+            <div id="score"></div>
             <div id="level">Level: 1</div>
             <div id="lives">Lives: 🐱🐱🐱</div>
             <div id="controls">
-                <button id="muteBtn">🔊 Sound</button>
-                <button id="pauseBtn">⏸ Pause</button>
+                <button id="muteBtn">🔊</button>
+                <button id="pauseBtn">⏸</button>
             </div>
         </div>
         <canvas id="gameCanvas" width="600" height="600"></canvas>
