--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                 <div class="legend-item">🌿</div>
                 <div class="legend-text">Catnip (1000 pts) - Score & Turbo Speed!</div>
             </div>
-            <button id="startBtn">Start Game</button>
+            <div class="start-buttons">
+                <button id="startNormalBtn">Normal</button>
+                <button id="startRelaxedBtn">Relaxed</button>
+            </div>
         </div>
         
         <div id="gameOverScreen" class="hidden">
