--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="main-content-wrapper">
         <div id="gameContainer">
             <div id="ui">
-                <div id="score"></div>
+                <div id="score"><span></span><span></span></div>
                 <div id="level">Level: 1</div>
                 <div id="lives">Lives: 🐱🐱🐱</div>
                 <div id="controls">
