Still adjusting layouts of score, level, etc.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <div id="gameContainer">
             <div id="ui">
                 <div id="score"><span></span><span></span></div>
-                <div id="level">Level: 1</div>
-                <div id="lives">Lives: 🐱🐱🐱</div>
+                <div id="level-lives-container">
+                    <div id="level">Level: 1</div>
+                    <div id="lives">Lives: 🐱🐱🐱</div>
+                </div>
                 <div id="controls">
                     <button id="muteBtn">🔊</button>
                     <button id="pauseBtn">⏸</button>
