Added intro song on title screen. New "click to start" button required.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         </div>
     </div>
         
+        <div id="clickToStartOverlay">
+            <h1>Click to Start</h1>
+        </div>
+        
         <div id="startScreen" class="hidden">
             <h1>🐱 Kittycade</h1>
             <div class="instructions">
