--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kittycade</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@latest/tsparticles.slim.bundle.min.js"></script>
 </head>
 <body>
+    <div id="tsparticles"></div>
     <div id="main-content-wrapper">
         <div id="gameContainer">
             <div id="ui">
