Change yarn ball back to emoji. Update legend from "treat" to "yarn ball"

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <div class="legend-text">Litter Box (100 pts) - Shrink (3 Segments)</div>
                 <div class="legend-item">🐀</div>
                 <div class="legend-text">Mischievous Mouse (500 pts) - Grow</div>
-                <canvas class="yarn-ball-legend legend-item" id="yarnLegend" width="40" height="40"></canvas>
-                <div class="legend-text">Treat (300 pts) - Score Bonus</div>
+                <div class="legend-item">🧶</div>
+                <div class="legend-text">Yarn ball (300 pts) - Score Bonus</div>
                 <div class="legend-item">🛏️</div>
                 <div class="legend-text">Cat Bed (200 pts) - Score Bonus & Nap</div>
                 <div class="legend-item">🌿</div>
