Adding dog to legend. Spacing needs work.

--- a/test/index.html
+++ b/test/index.html
@@ -38,6 +38,8 @@
                 <div class="legend-text">Cat Bed (200 pts) - Score Bonus & Nap</div>
                 <div class="legend-item">🌿</div>
                 <div class="legend-text">Catnip (1000 pts) - Score & Turbo Speed!</div>
+                <div class="legend-item">🐕</div>
+                <div class="legend-text">Dog (500 pts) - Tip: use catnip!</div>
             </div>
             <button id="startBtn">Start Game</button>
         </div>
