--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                 <div class="legend-text">Cat Bed (200 pts) - Score Bonus & Nap</div>
                 <div class="legend-item">🌿</div>
                 <div class="legend-text">Catnip (1000 pts) - Score & Turbo Speed!</div>
+                <div class="legend-item">🐕</div>
+                <div class="legend-text">Dog (500 pts) - Tip: use catnip!</div>
             </div>
             <div class="start-buttons">
                 <button id="startNormalBtn">Normal</button>
