--- a/test_index.html
+++ b/test_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kittycade Tests</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="gameContainer">
@@ -54,12 +54,12 @@
         <div id="pauseOverlay" class="hidden">PAUSED</div>
     </div>
     
-    <script src="../constants.js"></script>
-    <script src="../state.js"></script>
-    <script src="../renderer.js"></script>
-    <script src="../logic.js"></script>
-    <script src="../input.js"></script>
-    <script src="../main.js"></script>
-    <script src="test.js"></script>
+    <script src="constants.js"></script>
+    <script src="state.js"></script>
+    <script src="renderer.js"></script>
+    <script src="logic.js"></script>
+    <script src="input.js"></script>
+    <script src="main.js"></script>
+    <script src="test/test.js"></script>
 </body>
 </html>
