first real step on firebase, new files, updated GEMINI.md, etc.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kittycade</title>
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@latest/tsparticles.slim.bundle.min.js"></script>
 </head>
@@ -40,7 +41,7 @@
     </div>
         
         <div id="clickToStartOverlay">
-            <h1>Click to Start</h1>
+            <h1>Click to Start!</h1>
         </div>
         
         <div id="startScreen" class="hidden">
